<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">万银金融</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username_hint">用户名/邮箱</string>
    <string name="pwd_hint">密码</string>
    <string name="login_text">登录</string>
    <string name="host">请输入host</string>
    <string name="port">请输入端口</string>
</resources>